<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top">

    <ImageButton
        android:id="@+id/category_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:contentDescription="@string/select_category"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/incident_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/category_icon"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/category_icon"
        android:ems="10"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>

    <TableLayout
        android:id="@+id/detailed_info_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/category_icon" >

        <TableRow
            android:id="@+id/di_tr1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
            android:padding="5dip"
            android:layout_weight="0.25">

            <ImageView
                android:id="@+id/incident_photo"
                android:paddingLeft="10dp"
                android:layout_height="110dp"
                android:layout_width="150dp"
                android:contentDescription="@string/photo"
                android:src="@drawable/livestock"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/incident_map"
                android:layout_height="110dp"
                android:layout_width="170dp"
                android:contentDescription="@string/map"
                android:src="@drawable/map_icon"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/di_tr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/incident_note"
                android:layout_height="fill_parent"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/extra_notes"
                android:inputType="textMultiLine"
                android:layout_span="2" 
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/di_tr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

    </TableLayout>

</RelativeLayout>